pm-config/sc-infrastructure.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  # NOTE: This is number of nodes that we want to run
  # you may update this
  replicas: 2
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: elasticsearch
        image: docker-elk_elasticsearch
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        # NOTE: you can increase this resources
        resources:
          requests:
            memory: 512Mi
          limits:
            memory: 1024Mi
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
#        - name: config
#          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
#      volumes:
#      - name: config
#        configMap:
#          name: elasticsearch-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local
      selector:
        matchLabels:
          app: elasticsearch
      resources:
        requests:
          storage: 5Gi
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    name: serving
  - port: 9300
    name: node-to-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker-elk_kibana 
        ports:
        - containerPort: 5601
          name: http
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: kibana-config
          mountPath: /usr/share/kibana/config/
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana-lb
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30924
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: localhost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker-elk_logstash 
        ports:
        - containerPort: 5044
          name: filebeat
        - containerPort: 9600
          name: monitoring
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/config/
        - name: pipeline-config
          mountPath: /usr/share/logstash/pipeline/
      volumes:
      - name: logstash-config
        configMap:
          name: logstash-config
#          items:
#          - key: logstash.yml
      - name: pipeline-config
        configMap:
          name: pipeline-config
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
  - port: 5044
    name: filebeat
  - port: 9600
    name: monitoring
apiVersion: v1
kind: PersistentVolume
metadata:
  name: es-data-vol-1
  labels:
    type: local
    app: elasticsearch
spec:
  capacity:
    storage: 5Gi
  accessModes:
  - ReadWriteOnce
  storageClassName: local
  hostPath:
    path: '/host_mnt/d/data/es1'
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  # NOTE: This is number of nodes that we want to run
  # you may update this
  replicas: 2
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: elasticsearch
        image: docker-elk_elasticsearch
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        # NOTE: you can increase this resources
        resources:
          requests:
            memory: 512Mi
          limits:
            memory: 1024Mi
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
#        - name: config
#          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
#      volumes:
#      - name: config
#        configMap:
#          name: elasticsearch-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local
      selector:
        matchLabels:
          app: elasticsearch
      resources:
        requests:
          storage: 5Gi
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    name: serving
  - port: 9300
    name: node-to-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker-elk_kibana 
        ports:
        - containerPort: 5601
          name: http
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: kibana-config
          mountPath: /usr/share/kibana/config/
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana-lb
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30924
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: localhost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker-elk_logstash 
        ports:
        - containerPort: 5044
          name: filebeat
        - containerPort: 9600
          name: monitoring
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/config/
        - name: pipeline-config
          mountPath: /usr/share/logstash/pipeline/
      volumes:
      - name: logstash-config
        configMap:
          name: logstash-config
#          items:
#          - key: logstash.yml
      - name: pipeline-config
        configMap:
          name: pipeline-config
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
  - port: 5044
    name: filebeat
  - port: 9600
    name: monitoring
apiVersion: v1
kind: PersistentVolume
metadata:
  name: es-data-vol-1
  labels:
    type: local
    app: elasticsearch
spec:
  capacity:
    storage: 5Gi
  accessModes:
  - ReadWriteOnce
  storageClassName: local
  hostPath:
    path: '/host_mnt/d/data/es1'
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  # NOTE: This is number of nodes that we want to run
  # you may update this
  replicas: 2
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: elasticsearch
        image: docker-elk_elasticsearch
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        # NOTE: you can increase this resources
        resources:
          requests:
            memory: 512Mi
          limits:
            memory: 1024Mi
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
#        - name: config
#          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
#      volumes:
#      - name: config
#        configMap:
#          name: elasticsearch-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local
      selector:
        matchLabels:
          app: elasticsearch
      resources:
        requests:
          storage: 5Gi
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    name: serving
  - port: 9300
    name: node-to-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker-elk_kibana 
        ports:
        - containerPort: 5601
          name: http
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: kibana-config
          mountPath: /usr/share/kibana/config/
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana-lb
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30924
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: localhost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker-elk_logstash 
        ports:
        - containerPort: 5044
          name: filebeat
        - containerPort: 9600
          name: monitoring
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/config/
        - name: pipeline-config
          mountPath: /usr/share/logstash/pipeline/
      volumes:
      - name: logstash-config
        configMap:
          name: logstash-config
#          items:
#          - key: logstash.yml
      - name: pipeline-config
        configMap:
          name: pipeline-config
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
  - port: 5044
    name: filebeat
  - port: 9600
    name: monitoring
