pm-config/integration-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: integration-ingress
spec:
  rules:
  - host: 'integrations.servantscode.org' 
    http: 
      paths:
      - path: /rest/pushpay
        backend:
          serviceName: integration-svc
          servicePort: 8080
